--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(untitled2)
 
 set(CMAKE_CXX_STANDARD 17)
 
-add_executable(untitled2 main.cpp)
+add_executable(untitled2 main.cpp CustomString.cpp CustomString.h)
